issues fixed